# Cpp-Template

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
examples/: CMakeLists.txt  example_example.cpp
include/: example.h
src/: CMakeLists.txt  example.cpp
tests/: CMakeLists.txt  test_example.cpp
